--- a/4/mainwindow.ui
+++ b/4/mainwindow.ui
@@ -2137,9 +2137,9 @@ QHeaderView::section {
     background-color: #e1e1e1;
     color: black;
 	border: none;
-	padding-left: 30px;
 	font-size: 17px;
-	height: 22px;
+	height: 23px;
+	font-weight: bold;
 }
 
 QTreeView::item {
