--- a/4/mainwindow.ui
+++ b/4/mainwindow.ui
@@ -1749,7 +1749,7 @@ p, li { white-space: pre-wrap; }
       </widget>
       <widget class="QPushButton" name="toIntegerParentButton">
        <property name="enabled">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <property name="geometry">
         <rect>
@@ -2155,6 +2155,9 @@ QTreeView::item::selected {
 }
 </string>
        </property>
+       <attribute name="headerMinimumSectionSize">
+        <number>35</number>
+       </attribute>
        <column>
         <property name="text">
          <string>Name</string>
@@ -2173,6 +2176,11 @@ QTreeView::item::selected {
        <column>
         <property name="text">
          <string>Last edited</string>
+        </property>
+       </column>
+       <column>
+        <property name="text">
+         <string>Folder</string>
         </property>
        </column>
       </widget>
@@ -2310,7 +2318,7 @@ font-family: Roboto;</string>
        </widget>
        <widget class="QPushButton" name="filterElemButton">
         <property name="enabled">
-         <bool>false</bool>
+         <bool>true</bool>
         </property>
         <property name="geometry">
          <rect>
