--- a/4/mainwindow.ui
+++ b/4/mainwindow.ui
@@ -76,7 +76,7 @@ font-family: Roboto;</string>
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>1</number>
     </property>
     <property name="usesScrollButtons">
      <bool>true</bool>
@@ -610,7 +610,7 @@ font-family: Roboto;</string>
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
-      <widget class="QTreeWidget" name="binaryTree">
+      <widget class="TreeWidget" name="binaryTree">
        <property name="geometry">
         <rect>
          <x>0</x>
@@ -2027,7 +2027,7 @@ p, li { white-space: pre-wrap; }
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
-      <widget class="QTreeWidget" name="integerTree">
+      <widget class="TreeWidget" name="integerTree">
        <property name="geometry">
         <rect>
          <x>0</x>
@@ -2118,7 +2118,7 @@ e</string>
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
-      <widget class="QTreeWidget" name="fileSystem">
+      <widget class="FileSystemWidget" name="fileSystem">
        <property name="geometry">
         <rect>
          <x>0</x>
@@ -3086,6 +3086,9 @@ font-family: Roboto;</string>
           <height>31</height>
          </rect>
         </property>
+        <property name="clearButtonEnabled">
+         <bool>false</bool>
+        </property>
        </widget>
        <widget class="QLabel" name="label_143">
         <property name="geometry">
@@ -3489,6 +3492,18 @@ font-weight: bold;</string>
    </widget>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>TreeWidget</class>
+   <extends>QTreeWidget</extends>
+   <header>treewidget.h</header>
+  </customwidget>
+  <customwidget>
+   <class>FileSystemWidget</class>
+   <extends>QTreeWidget</extends>
+   <header>filesystemwidget.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
