--- a/4/mainwindow.ui
+++ b/4/mainwindow.ui
@@ -2499,6 +2499,9 @@ font-weight: bold;</string>
       </widget>
      </widget>
      <widget class="QGroupBox" name="ManipulateFileSystem">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>1130</x>
@@ -2506,6 +2509,9 @@ font-weight: bold;</string>
         <width>351</width>
         <height>741</height>
        </rect>
+      </property>
+      <property name="acceptDrops">
+       <bool>false</bool>
       </property>
       <property name="styleSheet">
        <string notr="true">QGroupBox {
