--- a/Lab5/graphswindow.ui
+++ b/Lab5/graphswindow.ui
@@ -633,7 +633,7 @@ font-family: Roboto;</string>
        <number>0</number>
       </property>
       <property name="maximum">
-       <number>1000000000</number>
+       <number>1</number>
       </property>
       <property name="value">
        <number>0</number>
@@ -670,7 +670,7 @@ font-family: Roboto;</string>
        <number>0</number>
       </property>
       <property name="maximum">
-       <number>1000000000</number>
+       <number>1</number>
       </property>
       <property name="value">
        <number>0</number>
